--- a/Views/Receipt/Index.cshtml
+++ b/Views/Receipt/Index.cshtml
@@ -3,7 +3,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    @model IEnumerable<CustomerViewList>;
+    @model IEnumerable<CustomerViewList>
 }
 <style>
     table,th,td {
@@ -12,6 +12,11 @@
 }
 </style>
 <h1>Generate Receipt</h1>
+
+@*@*@*@*<form asp-action="Index" asp-controller="Receipt">
+    @Html.TextBoxFor(model => model.ReceiptIdToken, CustomerViewList)
+    <input type="submit" value="submit" />
+</form>*@*@*@*@
 
 <table>
     <tr>
