--- a/Views/Receipt/GetAllReceipts.cshtml
+++ b/Views/Receipt/GetAllReceipts.cshtml
@@ -2,15 +2,15 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    @model Receipt<int,string>
+    @model dynamic
 
 }
-@*<style>
+<style>
     table, th, td {
         border: 1px solid black;
         border-radius: 10px;
     }
-</style>*@
+</style>
 <h1>Generate Receipt</h1>
 
 @*<form asp-action="Index" asp-controller="Receipt">
@@ -18,7 +18,7 @@
     <input type="submit" value="submit" />
 </form>*@
 
-@*<table>
+<table>
     <tr>
         <th>Receipt ID</th>
         <th>Amount Paid</th>
@@ -30,15 +30,4 @@
             <td>@item.AmountPaid</td>
         </tr>
     }
-</table>*@
-
-<form asp-action="Create">
-    <div class="form-group">
-        <label asp-for="AmountPaid" class="control-label"></label>
-        <input asp-for="AmountPaid" class="form-control" />
-        <span asp-validation-for="AmountPaid" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <input type="submit" class="form-control" />
-    </div>
-</form>
+</table>
